# TIAGo

./: README.md  rosGetData.py
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/aruco/: .catkin  .rosinstall  setup.sh
devel/.private/aruco_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/aruco_ros/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/controller_interface/: .catkin  .rosinstall  setup.sh
devel/.private/controller_manager/: .catkin  .rosinstall  setup.sh
devel/.private/controller_manager_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/controller_manager_tests/: .catkin  .rosinstall  setup.sh
devel/.private/ddynamic_reconfigure_python/: .catkin  .rosinstall  setup.sh
devel/.private/demo_motions/: .catkin  .rosinstall  setup.sh
devel/.private/diff_drive_controller/: .catkin  .rosinstall  setup.sh
devel/.private/effort_controllers/: .catkin  .rosinstall  setup.sh
devel/.private/force_torque_sensor_controller/: .catkin  .rosinstall  setup.sh
devel/.private/forward_command_controller/: .catkin  .rosinstall  setup.sh
devel/.private/gazebo_ros_control/: .catkin  .rosinstall  setup.sh
devel/.private/getDataSet/: .catkin  .rosinstall  setup.sh
getDataSet/: CMakeLists.txt  CMakeLists.txt~  package.xml
getDataSet/launch/: octomap_tiago.launch
getDataSet/src/: getDataSet.cpp  getDataSet.cpp~
logs/getDataSet/: build.cmake.002.log.stderr
logs/tiago_pcl_tutorial/: build.make.000.log.stderr
src/: .rosinstall  setup.sh
(+2735 files in other folders)
